[tool.poetry]
name = "tk-wallet"
version = "0.1.0"
description = "[Released] Legacy TK based Wallet for Bismuth Crypto currency"
authors = ["Aareon Sullivan <askully13@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
bisbasic = "^0.5.6"
bismuthclient = "^0.0.53"
pysocks = "^1.7.1"
pycryptodomex = "^3.20.0"
pillow = "^10.2.0"
pyqrcode = "^1.2.1"
ed25519 = "^1.5"
base58 = "^2.1.1"
coincurve = "^19.0.1"
bismuthcore = { git = "https://github.com/aareon/BismuthCore", branch = "aareon-refresh-1" }
aioprocessing = "^2.0.1"


[tool.poetry.group.dev.dependencies]
nuitka = "^2.1.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
